fix: use real Frontman version

--- a/docs/content/index.html.md.erb
+++ b/docs/content/index.html.md.erb
@@ -17,7 +17,7 @@ Frontman requires Ruby version <%= data.site.min_ruby_version %> or later.
 To get started, add the `frontman-ssg` gem to your `Gemfile`:
 
 ```sh
-bundle add frontman-ssg --version '~> <%= data.site.frontman_version %>'
+bundle add frontman-ssg --version '~> <%= Frontman::VERSION %>'
 ```
 
 > You can create a new `Gemfile` by running: `bundle init`.
