--- a/docs/src/layouts/layout.slim
+++ b/docs/src/layouts/layout.slim
@@ -31,7 +31,7 @@ html lang="en"
       | Skip to navigation
     .px-6.max-w-screen-2xl.mx-auto
       header.py-6.border-b.border-gray-300.dark:border-gray-600.flex.justify-between
-        a.block.text-xl.hover:underline href="/"
+        a.block.text-xl.hover:underline href="#{base_url}/"
           = data.site.title
         a.flex.p-2.gap-2.rounded.hover:underline href="https://github.com/algolia/frontman"
           svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -48,7 +48,7 @@ html lang="en"
             nav.space-y-2.dark:font-light.ml-2.lg:ml-0 id = "nav"
               - sorted.each do |page|
                 - active = (current_tree.url.nil? && page.url.nil?) || (current_tree.url == page.url)
-                a.block.text-lg.hover:underline.focus:outline-none.focus:underline.decoration-blue-600.decoration-2.underline-offset-2 href=(root?(page)  ? '/' : page.final_url) class=("font-medium border-gray-700 dark:border-gray-200 lg:border-l-[3px] lg:pl-5 lg:-ml-6" if active)
+                a.block.text-lg.hover:underline.focus:outline-none.focus:underline.decoration-blue-600.decoration-2.underline-offset-2 href=(link_to(page)) class=("font-medium border-gray-700 dark:border-gray-200 lg:border-l-[3px] lg:pl-5 lg:-ml-6" if active)
                   = sidebar_label(page)
               .space-y-2.pb-8
                 .border-t.border-gray-300.dark:border-gray-600.pt-6.mt-8
