--- a/docs/content/index.html.md.erb
+++ b/docs/content/index.html.md.erb
@@ -3,7 +3,7 @@ sidebar_label: Get started
 ---
 
 <% content_for :before_content do %>
-<% img_url = "#{Frontman::Config.get(:base_url)}/frontman-logo.svg"
+<% img_url = "#{Frontman::Config.get(:base_url)}/frontman-logo.svg" %>
 <img src="<%= img_url %>" alt="" class="mx-auto">
 <% end %>
 
