--- a/docs/src/partials/feature.erb
+++ b/docs/src/partials/feature.erb
@@ -1,4 +1,4 @@
-<div class="border border-gray-300 dark:border-gray-700 rounded-md px-4 py-2">
+<div class="border border-gray-300 dark:border-gray-700 rounded-md px-5 pt-4">
   <div class="font-bold dark:font-extrabold tracking-wide mb-6" markdown="0">
     <%= respond_to?(:label) ? label : "Feature" %>
   </div>
